--- a/colorGame.css
+++ b/colorGame.css
@@ -41,7 +41,7 @@ button {
 	font-weight: 700px;
 	color:steelblue;
 	letter-spacing: 1px;
-	font-size: inherit;
+	font-size: 35px;
 	outline: none;
 	transition: all 0.3s;
 	-webkit-transition: all 0.3s;
@@ -60,7 +60,7 @@ button:hover {
 
 #stripe {
 	background: white;
-	height: : 30px;
+	height: : 60px;
 	text-align: center;
 	color:black;
 }
